test-deploy/supervisor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supervisor-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supervisor-pods
  template:
    metadata:
      labels:
        app: supervisor-pods
    spec:
#      nodeSelector:
#        doks.digitalocean.com/node-pool: faveo-app-supervisor-nodes
      containers:
      - name: helpdesk-supervisor
        image: ladybird/faveo-multi-tenant-supervisor:dev.82
        resources:
          limits:
            memory: 2548Mi
            cpu: 2
          requests:
            memory: 1524Mi
            cpu: 800m
        volumeMounts:
        - name: volume-data
          mountPath: /var/www/html
        - name: cm
          mountPath: /var/www/html/.env
          subPath: .env
      volumes:
      - name: volume-data
        emptyDir: {}
      - name: cm
        configMap:
          name: faveocloud-env
