test-deploy/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: faveocloud-svc
  namespace: faveo-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: faveocloud-pods
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faveocloud-deploy
  namespace: faveo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faveocloud-pods
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: faveocloud-pods
    spec:
#      nodeSelector:
#        doks.digitalocean.com/node-pool: faveo-app-supervisor-nodes
      containers:
      - name: helpdesk-apache
        image: ladybird/faveo-multi-tenant-apache2:dev.82
        resources:
          limits:
            memory: 1024Mi
            cpu: 1
          requests:
            memory: 900Mi
            cpu: 800m
        livenessProbe:
          httpGet:
            path: /probe.php
            port: 80
          timeoutSeconds: 5
          periodSeconds: 7
          failureThreshold: 4
        readinessProbe:
          httpGet:
            path: /probe.php
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 7
        volumeMounts:
        - name: volume-data
          mountPath: /var/www/html
#        - name: cm
#          mountPath: /var/www/html/.env
#          subPath: .env
      volumes:
      - name: volume-data
        emptyDir: {}
#      - name: cm
#        configMap:
#          name: faveocloud-env
